# name: TestBLAST.test_update[uvloop-None-False-Error-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': False,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-False-Error-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': False,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-False-None-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': False,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-False-None-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': False,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-None-Error-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': None,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-None-Error-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': None,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-None-None-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': None,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-None-None-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': None,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-True-Error-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': True,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-True-Error-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': True,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-True-None-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': True,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-None-True-None-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': True,
          'result': None,
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-False-Error-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': False,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-False-Error-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': False,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-False-None-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': False,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-False-None-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': False,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-None-Error-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': None,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-None-Error-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': None,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-None-None-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': None,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-None-None-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': None,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-True-Error-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': True,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-True-Error-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': 'Error',
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': True,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-True-None-False]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': True,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: TestBLAST.test_update[uvloop-result1-True-None-True]
  <class 'dict'> {
    '_id': 'foo',
    'results': <class 'list'> [
      <class 'dict'> {
        'blast': 'bar',
        'index': 2,
      },
      <class 'dict'> {
        'blast': <class 'dict'> {
          'error': None,
          'interval': 3,
          'last_checked_at': datetime.datetime(2015, 10, 6, 20, 0),
          'ready': True,
          'result': <class 'dict'> {
            'foo': 'bar',
          },
          'rid': 'ABC123',
        },
        'index': 5,
      },
      <class 'dict'> {
        'blast': 'baz',
        'index': 12,
      },
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
  }
---
# name: test_create[uvloop-None]
  <class 'dict'> {
    '_id': '9pfsom1b',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': <class 'list'> [
    ],
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'id': 'test_job',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'test_ref',
      'name': None,
    },
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      'subtraction_1',
      'subtraction_2',
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': <class 'dict'> {
      'id': 'test_user',
    },
    'workflow': 'nuvs',
  }
---
# name: test_create[uvloop-None].1
  <class 'dict'> {
    '_id': '9pfsom1b',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': <class 'list'> [
    ],
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'id': 'test_job',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'test_ref',
      'name': None,
    },
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      'subtraction_1',
      'subtraction_2',
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': <class 'dict'> {
      'id': 'test_user',
    },
    'workflow': 'nuvs',
  }
---
# name: test_create[uvloop-test_analysis]
  <class 'dict'> {
    '_id': 'test_analysis',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': <class 'list'> [
    ],
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'id': 'test_job',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'test_ref',
      'name': None,
    },
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      'subtraction_1',
      'subtraction_2',
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': <class 'dict'> {
      'id': 'test_user',
    },
    'workflow': 'nuvs',
  }
---
# name: test_create[uvloop-test_analysis].1
  <class 'dict'> {
    '_id': 'test_analysis',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'files': <class 'list'> [
    ],
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'id': 'test_job',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'id': 'test_ref',
      'name': None,
    },
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      'subtraction_1',
      'subtraction_2',
    ],
    'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    'user': <class 'dict'> {
      'id': 'test_user',
    },
    'workflow': 'nuvs',
  }
---
# name: test_remove_nuvs_blast[uvloop]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'foo',
      'results': <class 'list'> [
        <class 'dict'> {
          'blast': 'bar',
          'index': 2,
        },
        <class 'dict'> {
          'blast': None,
          'index': 5,
        },
      ],
      'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    },
    <class 'dict'> {
      '_id': 'bar',
      'results': <class 'list'> [
        <class 'dict'> {
          'blast': 'bar',
          'index': 3,
        },
        <class 'dict'> {
          'blast': 'baz',
          'index': 9,
        },
      ],
      'updated_at': datetime.datetime(2015, 10, 6, 20, 0),
    },
  ]
---
